--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,5 +6,21 @@
 </head>
 <body>
 <h1>Server is Ready </h1>
+<div>
+    <div>status:</div>
+    <div th:text="${status}">
+        text rendered here
+    </div>
+    <div>java:</div>
+    <div th:text="${java}">
+        text rendered here
+   </div>
+    <div>web3j:</div>
+    <div th:text="${web3j}">
+        text rendered here
+   </div>
+
+</div>
+
 </body>
 </html>
