--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,10 @@
     <div th:text="${status}">
         text rendered here
     </div>
+    <div>network:</div>
+    <div th:text="${network}">
+        text rendered here
+    </div>
     <div>java:</div>
     <div th:text="${java}">
         text rendered here
